# mlship

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  WHY_MLSHIP.md  benchmark.py  pre_push.sh  pyproject.toml  run_tests.py  run_tests.sh
.github/workflows/: test.yml
examples/: __init__.py  huggingface_example.py  pytorch_example.py  sklearn_example.py
examples/pipelines/: __init__.py  sentiment_pipeline.py  simple_test.py  sklearn_normalization.py
mlship/: __init__.py  benchmark.py  cli.py  errors.py  models.py  pipeline.py  server.py  utils.py
mlship/loaders/: __init__.py  base.py  detector.py  huggingface.py  pytorch.py  sklearn.py  tensorflow.py
scripts/: post_release_smoke_test.sh
shipml/: cli.py  pipeline.py  server.py
shipml/loaders/: base.py  detector.py  huggingface.py  pytorch.py  sklearn.py  tensorflow.py
tests/: README.md  __init__.py  conftest.py  fixtures.py  test_benchmark.py  test_cli.py  test_cli_integration.py  test_integration.py  test_loaders.py  test_pipelines.py
